trainings working (opening/closing)
